[package]
name = "mibig-taxa"
description = "NCBI taxdump handling for MIBiG"
version = "0.1.0"
edition = "2021"
authors = ["Kai Blin <kblin@biosustain.dtu.dk>"]
repository = "https://github.com/mibig-secmet/taxa-rs.git"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
